Fix issue where padding at the bottom of the settings panel does not appear in Firefox/IE. Update Headers to be the same size, so that the headers on the listView and SettingsView align.

--- a/src/htdocs/css/list/_ListView.scss
+++ b/src/htdocs/css/list/_ListView.scss
@@ -39,6 +39,8 @@
 
 .list-view-header > .header-count {
   border: 0;
+  font-size: 0.88em;
+  padding: 0.25em 1em;
   margin: 1em 0;
 }
 
