--- a/src/htdocs/css/settings/_OptionsView.scss
+++ b/src/htdocs/css/settings/_OptionsView.scss
@@ -4,6 +4,7 @@
   background-color: #fff;
   border: 1px solid #ddd;
   font-size: 0.88em;
+  margin: 1em 0;
 
   > li {
 
